unpackaged/main/default/objects/pro_PCS__c/pro_PCS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>JP 21/03/2023 V1 - Created by Prodigy</description>
    <label>Prodigy Custom Settings</label>
</CustomObject>