unpackaged/main/default/objects/pro_PCS__c/fields/pro_Invoice_Cc_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Invoice_Cc_Email__c</fullName>
    <description>JP 23/05/2023 - Created by Prodigy</description>
    <label>Invoice Cc Email</label>
    <type>Email</type>
</CustomField>