unpackaged/main/default/objects/pro_PCS__c/fields/pro_Purchase_Order_PDF__c.field-meta.xml
<CustomField>
    <fullName>pro_Purchase_Order_PDF__c</fullName>
    <description>JP 21/03/2023 V1 - Created by Prodigy</description>
    <label>Purchase Order PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>