unpackaged/main/default/objects/pro_PCS__c/fields/pro_Purchase_Order_Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>pro_Purchase_Order_Visualforce_Page__c</fullName>
    <description>JP 23/03/2023 V1 - Created by Prodigy</description>
    <label>Purchase Order Visualforce Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>