unpackaged/main/default/objects/pro_PCS__c/fields/pro_Release_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>pro_Release_Email_Template__c</fullName>
    <description>JP 09/05/2023 - Created by Prodigy</description>
    <label>Release Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>