unpackaged/main/default/objects/pro_PCS__c/fields/pro_Remittance_Batch_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Remittance_Batch_Email__c</fullName>
    <description>JP 22/06/2023 - Created by Prodigy</description>
    <label>Remittance Batch Email</label>
    <type>Email</type>
</CustomField>