unpackaged/main/default/objects/pro_PCS__c/fields/pro_Statement_Cc_Email__c.field-meta.xml
<CustomField>
    <fullName>pro_Statement_Cc_Email__c</fullName>
    <description>JP 31/07/2023 - Created by Prodigy</description>
    <label>Statement Cc Email</label>
    <type>Email</type>
</CustomField>